Update headings and testimonials on homepage
Added underline to all h2 elements by default and removed it for specific headings using new CSS classes. Updated testimonial placeholders to encourage users to book a lesson, changed a social icon from Twitter to Instagram, and applied new classes to relevant headings in index.html for consistent styling.

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 					</ul>
 				</div>
 				<div class="col-md-8">
-					<h2>Hello There!</h2>
+					<h2 class="hello_heading">Hello There!</h2>
 					<p>
             Hi, I’m Monique! I’m an experienced EFL teacher with a passion for helping people grow their confidence in English—whether 
             it’s for business, academics, exams, or everyday communication. Over my more than 16 years of teaching, 
@@ -138,7 +138,7 @@
           </p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-twitter2"></i></a></li>
+							<li><a href="#"><i class="icon-instagram"></i></a></li>
 							<li><a href="#"><i class="icon-facebook3"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
 						</ul>
@@ -505,77 +505,75 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-3 text-center col-padding animate-box" style="max-height: fit-content;">
-												<a href="#" class="work" style="background-image: url(images/barca_test_img.JPG);">
+				<div class="col-md-3 text-center col-padding animate-box test_box" style="max-height: fit-content;">
+								<a href="#" class="work" style="background-image: url(images/barca_test_img.JPG);">
 								<div class="desc">
 									<h3>Barča</h3>
                   <p>Student</p>
-									<span style="max-height: fit-content;">
+									<span class="test_text" style="max-height:min-content;">
                     I have been learning English with Monique for five years now and during this time we have 
                     built not only a very friendly but truly wonderful relationship. Her lessons are always tailored 
                     to my needs – whether it’s grammar, conversation or preparation for an English certificate. 
                     Every time I leave with the feeling that I’ve made real progress. I always look forward to our 
                     classes because they are not only fun and educational but also enriching on a personal level. 
                     I would have a hard time finding a better English teacher – if such a person even exists.
-
                   </span>
 								</div>
 							</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
-            
 						<div class="desc">
-							<h3>Persons Name</h3>
-							<span>Caption</span>
+							<h3>Book a lesson</h3>
+							<span>This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
 						<div class="desc">
-							<h3>Persons Name</h3>
-							<span>Caption</span>
+							<h3>Book a lesson</h3>
+							<span>This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
 						<div class="desc">
-							<h3>Persons Name</h3>
-							<span>Caption</span>
+							<h3>Book a lesson</h3>
+							<span>This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
 						<div class="desc">
-							<h3>Persons Name</h3>
-							<span>Caption</span>
+							<h3>Book a lesson</h3>
+							<span>This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-6.jpg);">
 						<div class="desc">
-							<h3>Persons Name</h3>
-							<span>Caption</span>
+							<h3>Book a lesson</h3>
+							<span>This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-7.jpg);">
 						<div class="desc">
-							<h3>Persons Name</h3>
-							<span>Caption</span>
+							<h3>Book a lesson</h3>
+							<span>This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
 				<div class="col-md-3 text-center col-padding animate-box">
 					<a href="#" class="work" style="background-image: url(images/portfolio-8.jpg);">
 						<div class="desc">
-							<h3>Persons Name</h3>
-							<span>Caption</span>
+							<h3>Book a lesson</h3>
+							<span>This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
@@ -601,7 +599,7 @@
 			<div class="overlay"></div>
 		</div>
 		<div class="choose animate-box">
-			<h2>Contact me to answer any questions</h2>
+			<h2 class="contact_heading">Contact me to answer any questions</h2>
 			<form id="contactForm" action="https://formspree.io/f/xovlzwgo" method="POST" onsubmit="submitForm(event)">
 				<div class="row form-group">
 					<div class="col-md-6">
@@ -677,6 +675,8 @@
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
+
+
 	<!-- Burger Menu JavaScript -->
 	<script>
 		document.addEventListener('DOMContentLoaded', function() {
@@ -721,6 +721,8 @@
 				}
 			});
 		});
+
+
 		
 		// Form submission function
 		function submitForm(event) {
