Improve SEO, accessibility, and mobile responsiveness
Added responsive media and form styles to style.css for better mobile support. Enhanced index.html with improved meta tags, structured data (JSON-LD), favicon, preconnect for fonts, and updated social links for SEO and accessibility.

--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>English With Monique</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by freehtml5.co" />
-	<meta name="keywords" content="free website templates, free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive" />
+	<meta name="robots" content="index, follow">
+	<meta name="theme-color" content="#FF9000">
+	<meta name="description" content="Online English lessons with Monique Dias: General & Business English, Cambridge exam prep (KET, PET, FCE, CAE, CPE), and Conversational Portuguese. Based in Portugal, teaching students across the European Union." />
+	<meta name="keywords" content="English teacher, online English lessons, Cambridge exam preparation, KET, PET, FCE, CAE, CPE, Business English, Conversational English, ESL tutor, Portugal, Mirandela, European Union, EU, Europe, Portuguese lessons, English tutor online" />
 	<meta name="author" content="freehtml5.co" />
 
 
@@ -17,13 +19,17 @@
 	<meta property="og:url" content="https://www.linguaflowonline.com/"/>
 	<meta property="og:site_name" content="LinguaFlow"/>
 	<meta property="og:description" content="Personalized English lessons, Cambridge exam prep, and conversational Portuguese with Monique."/>
+	<meta property="og:type" content="website"/>
 	<meta name="twitter:title" content="English With Monique" />
 	<meta name="twitter:image" content="https://www.linguaflowonline.com/images/logo_no_bg.png" />
 	<meta name="twitter:url" content="https://www.linguaflowonline.com/" />
 	<meta name="twitter:card" content="summary_large_image" />
 
+	<link rel="preconnect" href="https://fonts.googleapis.com" crossorigin>
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
+	<link rel="icon" type="image/png" href="images/logo_no_bg.png">
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
@@ -34,6 +40,42 @@
 
 	<!-- Theme style  -->
 	<link rel="stylesheet" href="css/style.css">
+
+	<!-- Structured Data -->
+	<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@graph": [
+    {
+      "@type": "WebSite",
+      "name": "LinguaFlow",
+      "url": "https://www.linguaflowonline.com/",
+      "inLanguage": "en",
+      "publisher": {
+        "@type": "Organization",
+        "name": "LinguaFlow",
+        "logo": {
+          "@type": "ImageObject",
+          "url": "https://www.linguaflowonline.com/images/logo_no_bg.png"
+        }
+      }
+    },
+    {
+      "@type": "Person",
+      "name": "Monique Dias",
+      "jobTitle": "English Teacher",
+      "url": "https://www.linguaflowonline.com/",
+      "image": "https://www.linguaflowonline.com/images/Monique_profile-img2.jpeg",
+      "description": "Online English lessons across the EU: General & Business English, Cambridge exam preparation (KET, PET, FCE, CAE, CPE), and Conversational Portuguese. Based in Portugal.",
+      "sameAs": [
+        "https://www.facebook.com/",
+        "https://www.linkedin.com/",
+        "https://www.instagram.com/"
+      ]
+    }
+  ]
+}
+	</script>
 
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
@@ -90,7 +132,8 @@
 								<ul class="fh5co-social-icons">
 									<li><a href="#"><i class="icon-facebook2"></i></a></li>
 									<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-									<li><a href="#"><i class="icon-instagram"></i></a></li>
+									<li><a href="https://www.instagram.com/linguaflowonline/"><i class="icon-instagram"></i></a></li>
+									<li><a href="#"><i class="icon-pinterest"></i></a></li>
 								</ul>
 							</p>
 						</div>
@@ -138,9 +181,10 @@
           </p>
 					<p>
 						<ul class="fh5co-social-icons">
-							<li><a href="#"><i class="icon-instagram"></i></a></li>
+							<li><a href="https://www.instagram.com/linguaflowonline/"><i class="icon-instagram"></i></a></li>
 							<li><a href="#"><i class="icon-facebook3"></i></a></li>
 							<li><a href="#"><i class="icon-linkedin2"></i></a></li>
+              <li><a href="#"><i class="icon-pinterest"></i></a></li>
 						</ul>
 					</p>
 				</div>
