Update logo and favicon references
Replaced logo_no_bg.png with LinguaFlowLogo.png for favicon and logo usage. Updated index.html to reference the new logo in multiple sizes and added apple-touch-icon. Added .logo CSS class for styling.

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css?family=Space+Mono" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Kaushan+Script" rel="stylesheet">
-	<link rel="icon" type="image/png" href="images/logo_no_bg.png">
+	<link rel="icon" type="image/png" sizes="20x20" href="images/LinguaFlowLogo.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/LinguaFlowLogo.png">
+	<link rel="icon" type="image/png" sizes="48x48" href="images/LinguaFlowLogo.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/LinguaFlowLogo.png">
 	
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
