Add new testimonial and update testimonial containers
Added a testimonial for Tomáš Patsch with a new image and updated the HTML structure to use distinct testimonial container classes for each testimonial. Updated CSS to hide unused testimonial containers and style testimonial text. This improves testimonial management and presentation on the site.

--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-md-3 text-center col-padding animate-box test_box" style="max-height: fit-content;">
+				<div class="col-md-3 text-center col-padding animate-box test_box testimonial_container1" style="max-height: fit-content;">
 								<a href="#" class="work" style="background-image: url(images/barca_test_img.JPG);">
 								<div class="desc">
 									<h3>Barča</h3>
@@ -568,59 +568,66 @@
 								</div>
 							</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
+        <div class="col-md-3 text-center col-padding animate-box testimonial_container2">
+					<a href="#" class="work" style="background-image: url(images/thomas_img.png);">
+						<div class="desc">
+							<h3>Tomáš Patsch</h3>
+              <p>Lean Facilitator at Hartmann</p>
+							<span class="test_txt">
+                Working with Monique Dias has been an absolute pleasure for the past four years. Her teaching style is incredibly 
+                effective, seamlessly blending structured English lessons with engaging, casual conversation. 
+                Over time, our professional relationship has grown into a 
+                genuine friendship, making every lesson feel natural and enjoyable.
+              </span>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-3 text-center col-padding animate-box testimonial_container3">
 					<a href="#" class="work" style="background-image: url(images/portfolio-2.jpg);">
 						<div class="desc">
 							<h3>Book a lesson</h3>
-							<span>This could be your Testimonial</span>
+							<span class="test_txt">This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
-					<a href="#" class="work" style="background-image: url(images/portfolio-3.jpg);">
-						<div class="desc">
-							<h3>Book a lesson</h3>
-							<span>This could be your Testimonial</span>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
+				
+				<div class="col-md-3 text-center col-padding animate-box testimonial_container4">
 					<a href="#" class="work" style="background-image: url(images/portfolio-4.jpg);">
 						<div class="desc">
 							<h3>Book a lesson</h3>
-							<span>This could be your Testimonial</span>
+							<span class="test_txt">This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
+				<div class="col-md-3 text-center col-padding animate-box5">
 					<a href="#" class="work" style="background-image: url(images/portfolio-5.jpg);">
 						<div class="desc">
 							<h3>Book a lesson</h3>
-							<span>This could be your Testimonial</span>
+							<span class="test_txt">This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
+				<div class="col-md-3 text-center col-padding animate-box testimonial_container6">
 					<a href="#" class="work" style="background-image: url(images/portfolio-6.jpg);">
 						<div class="desc">
 							<h3>Book a lesson</h3>
-							<span>This could be your Testimonial</span>
+							<span class="test_txt">This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
+				<div class="col-md-3 text-center col-padding animate-box testimonial_container7">
 					<a href="#" class="work" style="background-image: url(images/portfolio-7.jpg);">
 						<div class="desc">
 							<h3>Book a lesson</h3>
-							<span>This could be your Testimonial</span>
+							<span class="test_txt">This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
-				<div class="col-md-3 text-center col-padding animate-box">
+				<div class="col-md-3 text-center col-padding animate-box8">
 					<a href="#" class="work" style="background-image: url(images/portfolio-8.jpg);">
 						<div class="desc">
 							<h3>Book a lesson</h3>
-							<span>This could be your Testimonial</span>
+							<span class="test_txt">This could be your Testimonial</span>
 						</div>
 					</a>
 				</div>
